Bug 577116 - Improve test utility method reusability and simplify tests
Change-Id: I73e4d227e8536dcef23ccb45ad7951b8365861da
Signed-off-by: Hannes Wellmann <wellmann.hannes1@gmx.net>
Reviewed-on: https://git.eclipse.org/r/c/pde/eclipse.pde.ui/+/187490
Tested-by: PDE Bot <pde-bot@eclipse.org>
Reviewed-by: Julian Honnen <julian.honnen@vector.com>